# racional-api

./: .gitignore  README.md  main.py  mydb.sqlite  pyproject.toml
src/: config.py  database.py  migration_examples.py  models.py
src/router/: __init__.py  auth.py  broker.py  history.py  portfolio.py  stock.py  transaction.py  user.py
